AB#6428385, AB#6428442, AB#6428322 Contrast ratio bugs (#4744)

--- a/client/src/app/site/spec-picker/spec-picker.component.scss
+++ b/client/src/app/site/spec-picker/spec-picker.component.scss
@@ -150,6 +150,14 @@ $center-column-max-width: calc(#{$spec-card-max-width}* 4 - 40px);
 
   .spec-expander {
     text-align: center;
+
+    a {
+      color: #0078d4;
+    }
+
+    a:focus {
+      color: #0078d4;
+    }
   }
 
   .isolated-spec {
